# nustar_planning

./: .gitignore  Orbit.py  Planner.py  README.md  Target.py  mapping.py  pyproject.toml
examples/: planner_example.ipynb
nustar_planning/: Orbit.py  Planner.py
nustar_planning/templates/: orbit_template.tex  stereo_template.tex
templates/: pdf_template.fdb_latexmk  pdf_template.fls  pdf_template.tex  planning.cls  target_template.tex
