[project]
dynamic = ["version"]
requires-python = ">=3.10"
name = "nustar_planning"
dependencies = [
    "astropy",
    "jinja2",
    "matplotlib",
    "numpy",
    "nustar_pysolar",
    "scipy",
    "sunpy"
]
readme = "README.md"

[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "nustar_planning.__version__"}

[tool.setuptools.package-data]
nustar_planning = ["templates/*"]